--- a/.github/workflows/soup-of-the-day.yml
+++ b/.github/workflows/soup-of-the-day.yml
@@ -13,10 +13,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: setup python
+      - name: Setup Python 3.8
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8 #install the python needed
-      - name: execute py script # run the run.py to get the latest data
+          python-version: 3.8
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
+      - name: Run soup of the day
         run: |
           python update_current.py
